# libretro-superflappybirds

./: -190124-164036.mkv  -190217-163237.mkv  -190217-163239.mkv  -190217-163240.mkv  -190217-163241.mkv  -190217-163242.mkv  -190217-163243.mkv  .bsv  .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.common  README.md  assets.hpp  auxillary.h  auxillary.hpp  bird.cpp  bird.h  bird.hpp  box.hpp  game.cpp  game.h  game.hpp  highscore_sub_window.hpp  image_library.h  image_library.hpp  input.h  input.hpp  libretro.cpp  libretro.h  libretro.hpp  libretro_interface.cpp  lr-superflappybirds.sh  menu.cpp  menu.h  menu.hpp  pipe_pair.cpp  pipe_pair.h  pipe_pair.hpp  (+6 more)
contexts/: context.hpp  context_high_score_view.cpp  context_high_score_view.hpp  context_highscore_input.cpp  context_highscore_input.hpp  context_load_old_save_file.cpp  context_load_old_save_file.hpp  context_main.cpp  context_main.hpp
engine/: animation.hpp  audio.cpp  audio.hpp  audio_mixer.cpp  audio_mixer.hpp  image.cpp  image.hpp  png_to_pam.py  pos.hpp  rect.hpp  renderer.cpp  renderer.hpp  sound.hpp  texture.hpp
planning/: cover.xcf  highscore screen.xcf  menu.xcf  score_background.xcf  score_multiplayer_background.xcf  scraper_cover.xcf  scraper_logo.xcf  scraper_side.xcf  winner_background.xcf
resources/: arrow.pam  bird.pam  bird2.pam  bird3.pam  bird4.pam  bird5.pam  bird6.pam  bird7.pam  bird8.pam  buildings.pnm  button_new_high_Score.pnm  credits.pnm  font_highscore.pam  ground.pnm  hand.pam  highscore_cursor.pam  highscore_frame.pam  numbers.pam  pipe_bottom.pam  pipe_top.pam  score_background.pnm  score_background_multiplayer.pnm  sky.pnm  start_1_player.pnm  start_2_player.pnm  start_3_player.pnm  start_4_player.pnm  start_5_player.pnm  start_6_player.pnm  start_7_player.pnm  start_8_player.pnm  start_single_player.pnm  title.pam  winner_background.pnm
